--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <meta charset="utf-8">
 <link href='bootstrap/css/bootstrap.css' rel='stylesheet' />
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css' />
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src='bootstrap/js/bootstrap.min.js'></script>
 <style>
 body {
