Added dates for jobs

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ fieldset[disabled] .btn-custom.active {
               </h3>
               <img width="450" src="/img/screenshots/rockmelt.png" />
               <p class="info-box-text">
-                RockMelt is not a browser, it's a WOWser. A browser for the socially active, RockMelt integrated Facebook/Twitter/RSS feeds and chat straight into the browser. As a member of the Platform team at this startup, I developed the YouTube application for the browser (pictured above), the RSS Feed infrastructure, the Social Reading feature for feeds, and backend support for browser extensions.
+                [June 2010 – March 2012] RockMelt is not a browser, it's a WOWser. A browser for the socially active, RockMelt integrated Facebook/Twitter/RSS feeds and chat straight into the browser. As a member of the Platform team at this startup, I developed the YouTube application for the browser (pictured above), the RSS Feed infrastructure, the Social Reading feature for feeds, and backend support for browser extensions.
               </p>
             </div>
             <div id="info-oneboxio" class="info-box">
@@ -229,7 +229,7 @@ fieldset[disabled] .btn-custom.active {
               </h3>
               <img width="450" src="/img/screenshots/oneboxio.png" />
               <p class="info-box-text">
-                OneBox.io auto-organizes your attachments, from multiple e-mail accounts, in your preferred cloud storage service, like Dropbox, Box, Google Drive, and OneDrive. As CEO, I led a team of three to develop OneBox.io and bring it to market.  
+                [Aug 2014 – Present] OneBox.io auto-organizes your attachments, from multiple e-mail accounts, in your preferred cloud storage service, like Dropbox, Box, Google Drive, and OneDrive. As CEO, I led a team of three to develop OneBox.io and bring it to market.  
               </p>
               <button type="button" class="btn btn-custom"><a href="http://onebox.io" target="_blank">Check it out!</a></button>
             </div>
@@ -239,7 +239,7 @@ fieldset[disabled] .btn-custom.active {
               </h3>
               <img width="450" src="/img/screenshots/streamonce.png" />
               <p class="info-box-text">
-                StreamOnce was a small startup that connected today’s business systems into their social-for-enterprise system. At StreamOnce, I was in charge of the User Interface/User Experience for managing StreamOnce integrations and I implemented HTML templates for displaying content from one enterprise tool in another.
+                [Feb 2013 – April 2013] StreamOnce was a small startup that connected today’s business systems into their social-for-enterprise system. At StreamOnce, I was in charge of the User Interface/User Experience for managing StreamOnce integrations and I implemented HTML templates for displaying content from one enterprise tool in another.
               </p>
             </div>
             <div id="info-jive" class="info-box">
@@ -248,7 +248,7 @@ fieldset[disabled] .btn-custom.active {
               </h3>
               <img width="450" src="/img/screenshots/jive.png" />
               <p class="info-box-text">
-                I joined Jive as part of the acquisition of StreamOnce in April 2014. At Jive, I designed and built a Jive application for configuring StreamOnce integrations, developed RSS and Twitter integrations, and created a Facebook application that serves as a Jive client (pictured above).
+                [April 2013 – Aug 2014] I joined Jive as part of the acquisition of StreamOnce in April 2014. At Jive, I designed and built a Jive application for configuring StreamOnce integrations, developed RSS and Twitter integrations, and created a Facebook application that serves as a Jive client (pictured above).
               </p>
             </div>
             <div id="info-stanfordcs210" class="info-box">
@@ -257,7 +257,7 @@ fieldset[disabled] .btn-custom.active {
               </h3>
               <img width="450" src="/img/screenshots/stanfordcs210.png" />
               <p class="info-box-text">
-                As a Course Assistant for CS210 (Software Projects with Corporate Partners), I developed assignments and advised student teams working on startup projects. Also, I revamped the class website (pictured above).
+                [Jan 2013 – June 2013] As a Course Assistant for CS210 (Software Projects with Corporate Partners), I developed assignments and advised student teams working on startup projects. Also, I revamped the class website (pictured above).
               </p>
               <button type="button" class="btn btn-custom"><a href="http://cs210.stanford.edu" target="_blank">Check it out!</a></button>
             </div>
